--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,32 @@
+body {
+  margin: 0;
+}
+
 h1 {
   color: red;
+}
+
+a {
+  color: red;
+}
+
+nav {
+  padding: 1rem;
+  background: lightgrey;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  margin-right: 1rem;
+}
+
+main {
+  padding: 1rem;
 }
