--- a/views/add-product.html
+++ b/views/add-product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add product</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <header>
@@ -16,7 +16,7 @@
       </nav>
     </header>
     <main>
-      <form>
+      <form action="/admin/add-product" method="POST">
         <label for="title">Title</label>
         <input type="text" name="title" id="title" />
         <button type="submit">Add product</button>
