--- a/views/not-found.html
+++ b/views/not-found.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page not found</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <h1>Error 404: Page not found</h1>
+    <main>
+      <h1>Error 404: Page not found</h1>
+    </main>
   </body>
 </html>
