--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= pageTitle %></title>
-    <link rel="stylesheet" href="/css/main.css" />
-  </head>
+  <%- include('../includes/head.ejs') %>
   <body>
-    <%- include('includes/header.ejs') %>
+    <%- include('../includes/header.ejs') %>
     <main>
       <form action="/admin/add-product" method="POST">
         <label for="title">Title</label>
