--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -2,14 +2,28 @@
   <nav>
     <ul>
       <li>
-        <!-- EJS does not support manipulating styles directly via JavaScript. -->
         <a href="/" class="<%= path === '/' && 'active' %>">Shop</a>
+      </li>
+      <li>
+        <a href="/products" class="<%= path === '/products' && 'active' %>"
+          >Products</a
+        >
+      </li>
+      <li>
+        <a href="/cart" class="<%= path === '/cart' && 'active' %>">My cart</a>
       </li>
       <li>
         <a
           href="/admin/add-product"
           class="<%= path === '/admin/add-product' && 'active' %>"
-          >Add product</a
+          >Admin: Add product</a
+        >
+      </li>
+      <li>
+        <a
+          href="/admin/products"
+          class="<%= path === '/admin/products' && 'active' %>"
+          >Admin: Products</a
         >
       </li>
     </ul>
