--- a/views/not-found.ejs
+++ b/views/not-found.ejs
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= pageTitle %></title>
-    <link rel="stylesheet" href="/css/main.css" />
-  </head>
+  <%- include('includes/head.ejs') %>
   <body>
     <main>
       <h1>Error 404: Page not found</h1>
