--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -3,8 +3,6 @@
   <%- include('../includes/head.ejs') %>
   <body>
     <%- include('../includes/header.ejs') %>
-    <main>
-      Welcome to the shop!
-    </main>
+    <main></main>
   </body>
 </html>
