--- a/views/shop/products.ejs
+++ b/views/shop/products.ejs
@@ -9,13 +9,21 @@
       <div class="grid">
         <% for (product of products) { %>
       </div>
-      <article class="product">
-        <header>
-          <h2><%= product.title %></h2>
-        </header>
-      </article>
+      <% if (product.title.length > 0) { %>
+        <article class="product">
+          <header>
+            <h2><%= product.title %></h2>
+            <img src="<%= product.imageUrl %>" alt="<%= product.title %>" />
+            <h3>$<%= product.price %></h3>
+            <p><%= product.description %></p>
+          </header>
+          <form action="/admin/add-to-cart" method="POST">
+            <button type="submit">Add to cart</button>
+          </form>
+        </article>
+      <% } %>
       <% } } else { %>
-      <p>No products have been added.</p>
+        <p>No products have been added.</p>
       <% } %>
     </main>
   </body>
