--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -5,8 +5,23 @@
     <%- include('../includes/header.ejs') %>
     <main>
       <form action="/admin/add-product" method="POST">
-        <label for="title">Title</label>
-        <input type="text" name="title" id="title" />
+        <div class="form-control">
+          <label for="title">Title</label>
+          <input type="text" name="title" id="title" />
+        </div>
+        <div class="form-control">
+          <label for="imageUrl">Image URL</label>
+          <input type="text" name="imageUrl" id="imageUrl" />
+        </div>
+        <div class="form-control">
+          <label for="price">Price</label>
+          <input type="number" name="price" id="price" step="0.01" />
+        </div>
+        <div class="form-control">
+          <label for="description">Description</label>
+          <textarea name="description" id="description" rows="5"></textarea>
+        </div>
+
         <button type="submit">Add product</button>
       </form>
     </main>
