--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -13,6 +13,9 @@
         <a href="/cart" class="<%= path === '/cart' && 'active' %>">My cart</a>
       </li>
       <li>
+        <a href="/orders" class="<%= path === '/orders' && 'active' %>">My orders</a>
+      </li>
+      <li>
         <a
           href="/admin/add-product"
           class="<%= path === '/admin/add-product' && 'active' %>"
